--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -20,8 +20,8 @@
   --navlink-readingtime-color-hover: #607d7d;
   --navlink-aboutyou-color: #473c3c;
   --navlink-aboutyou-color-hover: #6c5959;
-  --navlink-others-color: #45325d;
-  --navlink-others-color-hover: #685382;
+  --navlink-others-color: #494152;
+  --navlink-others-color-hover: #5f5a66;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --searchplaceholder-color: #939393;
