--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -85,13 +85,20 @@
             justify-content: flex-start;
             align-items: center;
             flex-grow: 1;
+            color: var(--text-color-hover1);
             i{
                 font-size: 1.2rem;
                 cursor: pointer;
                 transition: color 0.2s ease;
                 &:hover{
-                    color: var(--text-color-hover1);
+                    color: var(--text-color1);
                 }
+            }
+            .p-likebtn.active{
+                color: #1198ff;
+            }
+            .p-dislikebtn.active{
+                color: #bd1313;
             }
             .p-likes{
                 padding: 0 8px;
