--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -117,6 +117,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-grow: 1;
+  color: var(--text-color-hover1);
 }
 .post-detail .p-footer .pf-evaluation i {
   font-size: 1.2rem;
@@ -124,7 +125,13 @@
   transition: color 0.2s ease;
 }
 .post-detail .p-footer .pf-evaluation i:hover {
-  color: var(--text-color-hover1);
+  color: var(--text-color1);
+}
+.post-detail .p-footer .pf-evaluation .p-likebtn.active {
+  color: #1198ff;
+}
+.post-detail .p-footer .pf-evaluation .p-dislikebtn.active {
+  color: #bd1313;
 }
 .post-detail .p-footer .pf-evaluation .p-likes {
   padding: 0 8px;
