--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -1,8 +1,6 @@
 .post {
   margin-bottom: 12px;
   background-color: var(--background-color2);
-  overflow: hidden;
-  max-height: 260px;
   box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
 }
 .post:last-child {
@@ -54,62 +52,35 @@
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
   margin-bottom: 10px;
-  max-height: 300px;
-  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+}
+.post-detail .p-body .p-cover {
+  flex-shrink: 0;
+  padding-right: 14px;
+  display: flex;
+  align-items: center;
+}
+.post-detail .p-body .p-cover img {
+  max-width: 90px;
+  height: auto;
+  max-height: 140px;
+  border-radius: 4px;
+}
+.post-detail .p-body span {
+  flex-grow: 1;
   display: -webkit-box;
   -webkit-line-clamp: 7;
   -webkit-box-orient: vertical;
-  /*
-  text-overflow: ellipsis;*/
+  max-height: 152px;
+  overflow: hidden;
 }
 .post-detail .p-footer {
-  /*
-  font-family: 'Itim', cursive;
-  padding: 0 10px 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  */
   font-family: "Itim", cursive;
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
   padding: 0 10px 10px;
-  /*
-  i{
-      font-size: 1.2rem;
-      cursor: pointer;
-      transition: color 0.2s ease;
-      &:hover{
-          color: var(--text-color-hover1);
-      }
-  }
-  .p-likes{
-      padding: 0 8px;
-  }
-  .p-rate{
-      margin: 0 20px;
-      flex-grow: 1;
-  }
-  .p-username{
-      font-size: 0.8rem;
-      cursor: pointer;
-      padding-right: 8px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      max-width: 180px;
-      &:hover{
-          text-decoration: underline;
-      }
-  }
-  img{
-      height: 1.7rem;
-      width: 1.7rem;
-      border-radius: 50%;
-      cursor: pointer;
-  }*/
 }
 .post-detail .p-footer .pf-evaluation {
   display: flex;
