--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -56,6 +56,7 @@
         margin-bottom: 10px;
         display: flex;
         flex-direction: row;
+        align-items: flex-start;
         .p-cover{
             flex-shrink: 0;
             padding-right: 14px;
@@ -73,7 +74,6 @@
             display: -webkit-box;
             -webkit-line-clamp: 7;
             -webkit-box-orient: vertical;
-            max-height: 152px;
             overflow: hidden;
         }
     }
