--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -124,6 +124,7 @@ body {
 
 .main-cont {
   min-height: 100%;
+  padding-bottom: 30px;
 }
 
 header {
@@ -657,7 +658,7 @@ header .header-wrap {
 }
 @media (max-width: 767.98px) {
   .main-cont {
-    padding: 0;
+    padding: 0 0 30px;
     margin: 0;
     max-width: unset;
     width: 100%;
