minor fix and database update

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                 <span>Fanfiction</span>
             </a>
             <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="plot">
-                <i class="bi bi-card-text"></i>
+                <i class="bi bi-journal-text"></i>
                 <span>Plot</span>
             </a>
         </div>
@@ -48,7 +48,7 @@
         <span>About You</span>
         <div class="linkgroup">
             <div class="link_cont">
-                <i class="bi bi-journals"></i>
+                <i class="bi bi-collection"></i>
                 <span>Library</span>
             </div>
             <div class="link_cont">
@@ -64,6 +64,14 @@
     <div class="linkgroup_cont misclinks">
         <div class="linkgroup">
             <div class="link_cont">
+                <i class="bi bi-journal-plus"></i>
+                <span>Request</span>
+            </div>
+            <div class="link_cont">
+                <i class="bi bi-people"></i>
+                <span>Community</span>
+            </div>
+            <div class="link_cont">
                 <i class="bi bi-cart"></i>
                 <span>Shop</span>
             </div>
@@ -74,10 +82,6 @@
             <div class="link_cont">
                 <i class="bi bi-gear"></i>
                 <span>Settings</span>
-            </div>
-            <div class="link_cont">
-                <i class="bi bi-people"></i>
-                <span>Community</span>
             </div>
             <div class="link_cont">
                 <i class="bi bi-newspaper"></i>
