--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -419,6 +419,10 @@ main {
   border-radius: 20px;
   font-family: "Itim", cursive;
   overflow: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   /*.f-tagdd-cont{
       display: none;
       position: absolute;
@@ -729,6 +733,10 @@ main {
   background-color: var(--background-color2);
   box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
   padding-bottom: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .filter-tagdd .tagdd-header {
   width: 100%;
@@ -785,6 +793,10 @@ main {
   background-color: var(--background-color2);
   box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
   padding-bottom: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .filter-addseries .fadds-header {
   width: 100%;
