--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -211,6 +211,7 @@ main{
     border-radius: 20px;
     font-family: 'Itim', cursive;
     overflow: hidden;
+    user-select: none;
     /*.f-tagdd-cont{
         display: none;
         position: absolute;
@@ -521,6 +522,7 @@ main{
     background-color: var(--background-color2);
     box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
     padding-bottom: 10px;
+    user-select: none;
     .tagdd-header{
         width: 100%;
         flex-shrink: 0;
@@ -576,6 +578,7 @@ main{
     background-color: var(--background-color2);
     box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
     padding-bottom: 10px;
+    user-select: none;
     .fadds-header{
         width: 100%;
         flex-shrink: 0;
