--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -30,6 +30,9 @@
         //register
     --register-form-color: #404040;
     --register-input-color: #1d1d1d;
+        //publish
+    --publish-form-color: #404040;
+    --publish-input-color: #1d1d1d;
     //----------
 
     --searchplaceholder-color: #939393;
@@ -65,6 +68,9 @@
         //register
     --register-form-color: #f0f0f0;
     --register-input-color: #dcdcdc;
+        //publish
+    --publish-form-color: #f0f0f0;
+    --publish-input-color: #dcdcdc;
     //----------
 
     //#bda952
