--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -185,7 +185,7 @@
         </div>
         <div class="f-tagsincexc f-tags_exclude">
             <!--
-            <span data-ftag="romance">Romance</span>
+            <span data-ftag="romance">Romance<i class="bi bi-x-circle f-removetagbtn"></i></span>
             <input type="hidden" name="tagexclude" value="romance" data-ftagref="romance"/>
             -->
         </div>
