--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -330,10 +330,10 @@ main{
                     color: #fff;
 
                     > i{
+                        display: flex;
                         font-size: 1.1rem;
                         margin-left: 5px;
                         cursor: pointer;
-                        display: flex;
                         &:before {
                             background-color: #c08e8e;
                             border-radius: 50%;
@@ -357,10 +357,10 @@ main{
                 background: var(--background-color-hover2);
                 color: var(--text-color1);
                 padding: 4px;
-                margin: 0 5px 7px;
                 border-radius: 5px;
                 font-size: 1.1rem;
                 cursor: pointer;
+                margin: 0 5px 7px;
             }
             .f-allow18{
                 display: flex;
@@ -461,19 +461,19 @@ main{
                 cursor: pointer;
                 display: flex;
                 align-items: center;
-            }
-            .f-removetagbtn{
-                font-size: 1.1rem;
-                margin-left: 5px;
-                cursor: pointer;
-                display: none;
-                &:before {
-                    background-color: #be2424;
-                    border-radius: 50%;
-                    transition: 0.1s;
-                }
-                &:hover::before{
-                    background-color: #be2424 !important;
+                i{
+                    font-size: 1.1rem;
+                    margin-left: 5px;
+                    cursor: pointer;
+                    display: none;
+                    &:before {
+                        background-color: #be2424;
+                        border-radius: 50%;
+                        transition: 0.1s;
+                    }
+                    &:hover::before{
+                        background-color: #be2424 !important;
+                    }
                 }
             }
         }
